--- a/sls_fake_ecommerce/config/dev.yaml
+++ b/sls_fake_ecommerce/config/dev.yaml
@@ -4,3 +4,8 @@ awsRegion: us-east-2
 network:
   vpc:
     cidr: 192.168.0.0/16
+
+data:
+  rds:
+    dbadmin: 'masteruser'
+    dbname: 'paymentsdb'
